# ff7-ultima

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  build.ps1  index.html  map.html  package-lock.json  package.json  release.ps1  tailwind.config.js  tsconfig.json  updater.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: App.tsx  FF7Context.tsx  Hacks.tsx  Home.tsx  QuickActions.tsx  ff7.ts  ff7Addresses.ts  ff7BattleLocations.ts  ff7Battles.ts  ff7GameMoments.ts  ff7Music.ts  ff7Statuses.ts  main-map.tsx  main.css  main.tsx  memory.ts  opcodewriter.ts  settings.ts  shortcuts.ts  state.ts  types.ts  useFF7.ts  useSaveStates.ts  useSettings.ts  useShortcuts.ts  util.ts
src-tauri/: .gitignore  2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: addresses.rs  commands.rs  ff7.rs  ff7text.rs  logging.rs  main.rs  memory.rs  process.rs  updater.rs
src-tauri/src/ff7/: addresses.rs  ff7text.rs  mod.rs  types.rs
src-tauri/src/ff7/data/: basic.rs  battle.rs  field.rs  kernel.rs  mod.rs  party.rs  world.rs
src-tauri/src/ff7/types/: basic.rs  battle.rs  field.rs  items.rs  kernel.rs  mod.rs  party.rs  world.rs
src-tauri/src/utils/: memory.rs  mod.rs  process.rs
src/components/: AboutModal.tsx  AlertModal.tsx  Autocomplete.tsx  BattleAutocomplete.tsx  BattleLogRow.tsx  CategoryPopover.tsx  EditModal.tsx  EditPopover.tsx  GroupButton.tsx  Modal.tsx  Party.tsx  Row.tsx  SaveStates.tsx  StatusBar.tsx  VisibilityAwareVariableField.tsx  VisibilityTestComponent.tsx
src/data/: saveBanks.ts  savemap.ts  scenes.json
src/ff7/: evfile.ts  ff7exefile.ts  texfile.ts
src/hooks/: useAlert.tsx  useBattleLog.ts  useMapState.ts  useVisibilityObserver.ts
src/lib/: logging.ts  utils.ts
src/modules/: Battle.tsx  (+10 more)
(+49 files in other folders)
