[package]
name = "ff7-ultima"
version = "1.1.1"
description = "Real-time editor for Final Fantasy VII"
authors = ["m4v3r"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
winapi = { version = "0.3", features = ["memoryapi", "winnt"] }
tauri = { version = "2.1.0", features = [] }
tauri-plugin-shell = "2.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "=0.30.12"
process-memory = "0.5.0"
lazy_static = "1.5.0"
parking_lot = "0.12.3"
windows-hotkeys = "0.2.1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"

